block user succesfully completed
