# api-gateway/cmd/api/docs/swagger.json
@@ -31,7 +31,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "Problem Management"
                 ],
                 "summary": "Create a Problem",
                 "parameters": [
@@ -88,7 +88,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "Problem Management"
                 ],
                 "summary": "Insert first half of problem",
                 "parameters": [
@@ -152,7 +152,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "Problem Management"
                 ],
                 "summary": "Insert second half of problem",
                 "parameters": [
@@ -213,7 +213,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "User Management"
                 ],
                 "summary": "Get Users",
                 "responses": {
@@ -256,6 +256,64 @@
                 }
             }
         },
+        "/admin/user/{id}": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admin Can block/unblock user by passing id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Management"
+                ],
+                "summary": "Block user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success: get all users",
+                        "schema": {
+                            "$ref": "#/definitions/response.BlockedStatus"
+                        }
+                    },
+                    "204": {
+                        "description": "no users",
+                        "schema": {
+                            "$ref": "#/definitions/response.BlockedStatus"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/response.BlockedStatus"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.BlockedStatus"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.BlockedStatus"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/user/{keyword}": {
             "get": {
                 "security": [
@@ -268,7 +326,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "User Management"
                 ],
                 "summary": "Search Users",
                 "parameters": [
@@ -343,7 +401,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "user"
+                    "Problem Execution Service"
                 ],
                 "summary": "Execute code",
                 "parameters": [
@@ -406,7 +464,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "user"
+                    "Problem Execution Service"
                 ],
                 "summary": "Execute code",
                 "parameters": [
@@ -476,7 +534,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "general"
+                    "Problem Execution Service"
                 ],
                 "summary": "get one problems",
                 "parameters": [
@@ -532,8 +590,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user",
-                    "admin"
+                    "Authentication"
                 ],
                 "summary": "User signin",
                 "parameters": [
@@ -591,7 +648,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Authentication"
                 ],
                 "summary": "User signup",
                 "parameters": [
@@ -812,6 +869,17 @@
                 }
             }
         },
+        "response.BlockedStatus": {
+            "type": "object",
+            "properties": {
+                "blocked": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "response.JsonResponse": {
             "type": "object",
             "properties": {
@@ -885,6 +953,9 @@
         "response.User": {
             "type": "object",
             "properties": {
+                "blocked": {
+                    "type": "boolean"
+                },
                 "created_at": {
                     "type": "string"
                 },
