# api-gateway/pkg/utils/response/admin.go
@@ -11,4 +11,10 @@ type User struct {
 	LastName  string    `json:"last_name"` // for proper representaion of null value in go sql.Null is used
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
+	Blocked   bool      `json:"blocked"`
+}
+
+type BlockedStatus struct {
+	ID      int  `json:"id"`
+	Blocked bool `json:"blocked"`
 }
